--- a/app/src/main/res/layout/activity_supplement_info.xml
+++ b/app/src/main/res/layout/activity_supplement_info.xml
@@ -100,7 +100,7 @@
         android:layout_gravity="bottom"
         android:background="@color/white"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
