--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -21,8 +21,7 @@
             <ImageView
                 android:id="@+id/iv_my_head_pic"
                 android:layout_width="80dip"
-                android:layout_height="80dip"
-                android:src="@drawable/temp_head_pic" />
+                android:layout_height="80dip" />
 
             <TextView
                 android:id="@+id/tv_show_myname"
