部分页面布局调整；增加我的页面中二级页面（只有页面暂无数据）个人信息修改（有bug）；成长页面收藏功能完成；

--- a/app/src/main/res/layout/activity_knowledge_list.xml
+++ b/app/src/main/res/layout/activity_knowledge_list.xml
@@ -51,8 +51,8 @@
             android:layout_height="match_parent"
             android:background="@drawable/bg_item_white_touchable"
             android:clickable="true"
-            android:divider="#f7fbff"
-            android:dividerHeight="8dip"
+            android:divider="#e1e1e1"
+            android:dividerHeight="1dip"
             android:fadingEdge="none"
             android:focusable="true"
             android:listSelector="@drawable/bg_item_white_touchable"
