--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -21,7 +21,8 @@
             <ImageView
                 android:id="@+id/iv_my_head_pic"
                 android:layout_width="80dip"
-                android:layout_height="80dip" />
+                android:layout_height="80dip"
+                android:scaleType="center"/>
 
             <TextView
                 android:id="@+id/tv_show_myname"
@@ -46,7 +47,8 @@
                 style="@style/tv_personal_info_item_left_text"
                 android:layout_below="@+id/tv_show_myname"
                 android:layout_marginTop="14dip"
-                android:layout_toRightOf="@+id/tv_show_myname"
+                android:layout_toRightOf="@+id/tv_mynickname"
+                android:paddingLeft="5dip"
                 android:text="zhoulingan"
                 android:textColor="#9b9b9b" />
 
