--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -7,9 +7,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="10dip"
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/layout_search"
             android:layout_width="match_parent"
             android:layout_height="44dip"
             android:layout_marginLeft="15dip"
@@ -17,50 +19,30 @@
             android:layout_marginTop="10dip"
             android:background="@drawable/growup_search">
 
-            <ImageView
-                android:id="@+id/iv_search_show"
-                android:layout_width="18dip"
-                android:layout_height="18dip"
-                android:layout_marginLeft="5dip"
-                android:src="@drawable/search_logo"
-                android:visibility="gone"
-                android:layout_centerVertical="true"/>
-
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/iv_search_show"
-                android:layout_marginLeft="5dip"
-                android:background="@null" />
-
             <LinearLayout
-                android:id="@+id/layout_search_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="18dip"
-                    android:layout_height="18dip"
+                    android:layout_width="17dip"
+                    android:layout_height="17dip"
                     android:src="@drawable/search_logo" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
-                    android:text="搜索"
-                    android:textColor="@color/textColorLight" />
+                    android:text="@string/search" />
             </LinearLayout>
         </RelativeLayout>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="8dip"
             android:layout_marginTop="10dip"
             android:background="#eeeeee" />
-
         <com.uuzz.android.ui.view.ptr.PtrListView
             android:id="@+id/lv_listview"
             android:layout_width="match_parent"
@@ -74,6 +56,5 @@
             android:listSelector="@drawable/bg_item_white_touchable"
             android:scrollbarStyle="outsideOverlay" />
     </LinearLayout>
-
 
 </com.uuzz.android.ui.view.ptr.PtrClassicFrameLayout>
