--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -31,6 +31,7 @@
                 android:id="@+id/iv_persion_head_pic"
                 android:layout_width="50dip"
                 android:layout_height="50dip"
+                android:layout_marginRight="3dip"
                 android:layout_alignParentRight="true" />
         </RelativeLayout>
 
