--- a/app/src/main/res/layout/activity_question_list.xml
+++ b/app/src/main/res/layout/activity_question_list.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,8 +54,8 @@
             android:layout_height="match_parent"
             android:background="@drawable/bg_item_white_touchable"
             android:clickable="true"
-            android:divider="#f7fbff"
-            android:dividerHeight="8dip"
+            android:divider="#e1e1e1"
+            android:dividerHeight="1dip"
             android:fadingEdge="none"
             android:focusable="true"
             android:listSelector="@drawable/bg_item_white_touchable"
