--- a/app/src/main/res/layout/activity_health_data_frame.xml
+++ b/app/src/main/res/layout/activity_health_data_frame.xml
@@ -101,7 +101,7 @@
                     android:background="@drawable/health_selector_mother_touchable"
                     android:text="母亲"/>
                 <RadioButton
-                    android:id="@+id/rb_baby"
+                    android:id="@+id/rb_baby0"
                     android:layout_width="0dip"
                     android:layout_height="30dip"
                     android:button="@null"
