--- a/app/src/main/res/layout/fragment_health_layout.xml
+++ b/app/src/main/res/layout/fragment_health_layout.xml
@@ -1,213 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fl_fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f7fbff">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/primary_margin"
-        android:orientation="vertical">
-        <!-- 头部 -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/primary_margin"
-            android:background="@color/white">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="272dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/health_test"/>
-            <ImageView
-                android:id="@+id/im_arc"
-                android:layout_marginTop="151dip"
-                android:layout_width="match_parent"
-                android:layout_height="195dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/bg_tranlusent_arc"/>
-
-            <TextView
-                android:id="@+id/tv_health_title"
-                android:layout_marginLeft="@dimen/primary_margin"
-                android:layout_marginTop="34dip"
-                android:layout_alignTop="@+id/im_arc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_health"
-                android:textSize="@dimen/primary_text_size"
-                android:textColor="@color/textColorPrimary"/>
-
-            <TextView
-                android:id="@+id/tv_health_analysis"
-                android:layout_marginLeft="30dip"
-                android:layout_marginTop="18dip"
-                android:layout_below="@+id/tv_health_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/health_analysis"
-                android:textSize="@dimen/primary_text_size"
-                android:textColor="@color/colorAccent"/>
-
-            <TextView
-                android:id="@+id/tv_health_desc"
-                android:layout_below="@+id/tv_health_analysis"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dip"
-                android:layout_marginTop="18dip"
-                android:layout_marginRight="30dip"
-                android:text="@string/test_health"
-                android:textSize="@dimen/primary_text_size"
-                android:textColor="@color/textColorPrimary"/>
-
-            <ImageView
-                android:id="@+id/im_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="30dip"
-                android:src="@drawable/ic_more"/>
-
-            <TextView
-                android:id="@+id/tv_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/im_more"
-                android:paddingRight="@dimen/text_space"
-                android:layout_alignParentBottom="true"
-                android:textSize="@dimen/second_text_size"
-                android:textColor="@color/colorAccent"
-                android:text="@string/know_more"/>
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_form_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:orientation="vertical">
-            <RadioGroup
-                android:id="@+id/rg_selector"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="31dip"
-                android:layout_marginRight="31dip"
-                android:layout_marginBottom="@dimen/primary_margin"
-                android:orientation="horizontal">
-                <RadioButton
-                    android:id="@+id/rb_mother"
-                    android:layout_width="0dip"
-                    android:layout_height="30dip"
-                    android:layout_weight="1"
-                    android:button="@null"
-                    android:gravity="center"
-                    android:checked="true"
-                    android:textColor="@drawable/health_selector_text_color"
-                    android:background="@drawable/health_selector_mother_touchable"
-                    android:text="母亲"/>
-                <RadioButton
-                    android:id="@+id/rb_baby"
-                    android:layout_width="0dip"
-                    android:layout_height="30dip"
-                    android:button="@null"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textColor="@drawable/health_selector_text_color"
-                    android:background="@drawable/health_selector_baby_touchable"
-                    android:text="@string/baby"/>
-            </RadioGroup>
-            <FrameLayout
-                android:id="@+id/fl_form_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <include
-                    android:id="@+id/form_mother"
-                    layout="@layout/fragment_form_mother_layout" />
-                <include
-                    android:id="@+id/form_baby"
-                    android:visibility="gone"
-                    layout="@layout/fragment_form_baby_layout"/>
-            </FrameLayout>
-            <TextView
-                android:id="@+id/tv_retract"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/retract"
-                android:background="@drawable/bg_corner_gray"
-                android:layout_marginLeft="@dimen/primary_margin"
-                android:layout_marginRight="@dimen/primary_margin"
-                android:padding="3dip"
-                android:textSize="@dimen/primary_text_size"
-                android:gravity="center"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="@dimen/primary_List_margin"
-            android:paddingTop="25dip"
-            android:paddingLeft="@dimen/primary_margin"
-            android:paddingRight="@dimen/primary_margin"
-            android:background="@color/white">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/primary_text_size"
-                android:textColor="@color/textColorPrimary"
-                android:text="@string/other"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:id="@+id/ll_activity"
-                    style="@style/item_container">
-                    <ImageView
-                        android:src="@drawable/ic_activity"
-                        android:background="@drawable/bg_border_corner_all_activity"
-                        style="@style/health_item_icon" />
-
-                    <TextView
-                        android:background="@drawable/bg_line_text_activity"
-                        android:textColor="@color/healthActivity"
-                        android:text="@string/activity"
-                        style="@style/health_item_text"
-                        android:id="@+id/textView2" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/ll_food"
-                    android:layout_marginLeft="@dimen/primary_List_margin"
-                    android:layout_marginRight="@dimen/primary_List_margin"
-                    style="@style/item_container">
-                    <ImageView
-                        android:src="@drawable/ic_food"
-                        android:background="@drawable/bg_border_corner_all_food"
-                        style="@style/health_item_icon" />
-                    <TextView
-                        android:background="@drawable/bg_line_text_food"
-                        android:textColor="@color/healthFood"
-                        android:text="@string/food"
-                        style="@style/health_item_text" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/ll_knowledge"
-                    style="@style/item_container">
-                    <ImageView
-                        android:src="@drawable/ic_knowledge"
-                        android:background="@drawable/bg_border_corner_all_knowledge"
-                        style="@style/health_item_icon" />
-                    <TextView
-                        android:background="@drawable/bg_line_text_knowledge"
-                        android:textColor="@color/healthKnowledge"
-                        android:text="@string/knowledge"
-                        style="@style/health_item_text" />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-</ScrollView>
+</FrameLayout>
