健康入住中页面妈妈数据请求 修改个人信息页面跳转逻辑 添加两种用户状态 修复激活接口登录失效不能跳转登录页面bug

--- a/app/src/main/res/layout/activity_nickname_change.xml
+++ b/app/src/main/res/layout/activity_nickname_change.xml
@@ -37,6 +37,7 @@
             android:layout_marginLeft="5dip"
             android:layout_toLeftOf="@+id/et_nickname_change"
             android:layout_marginRight="7dip"
+            android:visibility="gone"
             android:src="@drawable/cancel_et_content" />
     </RelativeLayout>
 
