--- a/app/src/main/res/layout/item_question_list.xml
+++ b/app/src/main/res/layout/item_question_list.xml
@@ -8,10 +8,10 @@
         android:id="@+id/tv_question_list_title"
         android:layout_width="wrap_content"
         android:layout_height="19dip"
-        android:layout_marginLeft="15dip"
-        android:layout_marginTop="15dip"
+        android:layout_marginLeft="@dimen/primary_margin"
+        android:layout_marginTop="@dimen/primary_margin"
         android:text="小孩应该多久喂一次奶"
-        android:textSize="15dip" />
+        android:textSize="@dimen/primary_margin" />
 
     <TextView
         android:id="@+id/tv_question_list_content"
