--- a/app/src/main/res/layout/activity_health_data_frame.xml
+++ b/app/src/main/res/layout/activity_health_data_frame.xml
@@ -1,130 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <LinearLayout
+    <ScrollView
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#f7fbff"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/primary_List_margin"
-            android:paddingLeft="@dimen/primary_margin"
-            android:paddingRight="@dimen/primary_margin"
-            android:background="@color/colorPrimary">
-            <TextView
-                android:id="@+id/tv_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_marginRight="@dimen/text_space"
-                android:textSize="25dip"
-                android:text="9月"/>
-            <TextView
-                android:id="@+id/tv_week"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/tv_month"
-                android:textColor="@color/white"
-                android:textSize="@dimen/third_text_size"
-                android:text="周四"/>
-            <TextView
-                android:id="@+id/tv_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_week"
-                android:layout_toRightOf="@id/tv_month"
-                android:textColor="@color/white"
-                android:textSize="@dimen/third_text_size"
-                android:text="2016年"/>
+        android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_year"
-                android:layout_marginTop="@dimen/primary_List_margin"
-                android:layout_marginBottom="@dimen/primary_List_margin"
-                android:orientation="horizontal">
-                <TextView
-                    android:text="@string/sunday"
-                    style="@style/week" />
-                <TextView
-                    android:text="一"
-                    style="@style/week" />
-                <TextView
-                    android:text="二"
-                    style="@style/week" />
-                <TextView
-                    android:text="三"
-                    style="@style/week" />
-                <TextView
-                    android:text="四"
-                    style="@style/week" />
-                <TextView
-                    android:text="五"
-                    style="@style/week" />
-                <TextView
-                    android:text="六"
-                    style="@style/week" />
-            </LinearLayout>
-        </RelativeLayout>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="235dip"
-            android:src="@drawable/temp_canlder"
-            android:scaleType="fitXY"/>
+                android:background="#f7fbff"
+                android:orientation="vertical">
 
+                <RelativeLayout
+                    android:id="@+id/rl_choose_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/primary_margin"
+                    android:paddingRight="@dimen/primary_margin"
+                    android:paddingTop="@dimen/primary_List_margin"
+                    android:paddingBottom="@dimen/primary_List_margin">
+                    <com.uuzz.android.ui.view.IconTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/icon_return"
+                        android:textSize="20dip"/>
+                    <TextView
+                        android:id="@+id/tv_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/primary_text_size"
+                        android:textColor="@color/textColorPrimary"
+                        android:layout_centerInParent="true"
+                        tools:text="2014年"/>
+                    <com.uuzz.android.ui.view.IconTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:text="@string/icon_next"
+                        android:textSize="20dip"/>
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/primary_List_margin"
+                    android:background="@color/white"
+                    android:orientation="vertical">
+                    <RadioGroup
+                        android:id="@+id/rg_selector"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="31dip"
+                        android:layout_marginRight="31dip"
+                        android:layout_marginBottom="@dimen/primary_margin"
+                        android:orientation="horizontal">
+                        <RadioButton
+                            android:id="@+id/rb_mother"
+                            android:layout_width="0dip"
+                            android:layout_height="30dip"
+                            android:layout_weight="1"
+                            android:button="@null"
+                            android:gravity="center"
+                            android:checked="true"
+                            android:textColor="@drawable/health_selector_text_color"
+                            android:background="@drawable/health_selector_mother_touchable"
+                            android:text="母亲"/>
+                        <RadioButton
+                            android:id="@+id/rb_baby3"
+                            android:layout_width="0dip"
+                            android:layout_height="match_parent"
+                            android:button="@null"
+                            android:layout_weight="1"
+                            android:background="@drawable/grow_up_selector_middle_touchable"
+                            android:gravity="center"
+                            android:text="@string/baby"
+                            android:visibility="gone"
+                            android:textColor="@drawable/health_selector_text_color"
+                            android:textSize="14dip" />
+                        <RadioButton
+                            android:id="@+id/rb_baby2"
+                            android:layout_width="0dip"
+                            android:layout_height="match_parent"
+                            android:button="@null"
+                            android:layout_weight="1"
+                            android:background="@drawable/grow_up_selector_middle_touchable"
+                            android:gravity="center"
+                            android:visibility="gone"
+                            android:text="@string/baby"
+                            android:textColor="@drawable/health_selector_text_color"
+                            android:textSize="14dip" />
+                        <RadioButton
+                            android:id="@+id/rb_baby1"
+                            android:layout_width="0dip"
+                            android:layout_height="match_parent"
+                            android:button="@null"
+                            android:layout_weight="1"
+                            android:background="@drawable/grow_up_selector_middle_touchable"
+                            android:gravity="center"
+                            android:visibility="gone"
+                            android:text="@string/baby"
+                            android:textColor="@drawable/health_selector_text_color"
+                            android:textSize="14dip" />
+                        <RadioButton
+                            android:id="@+id/rb_baby0"
+                            android:layout_width="0dip"
+                            android:layout_height="30dip"
+                            android:button="@null"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:textColor="@drawable/health_selector_text_color"
+                            android:background="@drawable/health_selector_baby_touchable"
+                            android:text="@string/baby"/>
+                    </RadioGroup>
+                    <FrameLayout
+                        android:id="@+id/fl_form_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="@dimen/primary_margin"
+                        android:paddingRight="@dimen/primary_margin">
+                        <include
+                            android:id="@+id/data_mother"
+                            layout="@layout/fragment_health_data_mother" />
+                        <include
+                            android:id="@+id/data_baby"
+                            android:visibility="gone"
+                            layout="@layout/fragment_health_data_baby"/>
+                    </FrameLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+    </ScrollView>
+    <LinearLayout
+        android:id="@+id/ll_time_picker_container"
+        android:layout_width="match_parent"
+        android:layout_height="334dip"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primary_List_margin"
-            android:background="@color/white"
+            android:background="@color/colorPrimary"
             android:orientation="vertical">
-            <RadioGroup
-                android:id="@+id/rg_selector"
-                android:layout_width="match_parent"
+            <com.uuzz.android.ui.view.MyButton
+                android:id="@+id/btn_choose_commit"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="31dip"
-                android:layout_marginRight="31dip"
-                android:layout_marginBottom="@dimen/primary_margin"
-                android:orientation="horizontal">
-                <RadioButton
-                    android:id="@+id/rb_mother"
-                    android:layout_width="0dip"
-                    android:layout_height="30dip"
-                    android:layout_weight="1"
-                    android:button="@null"
-                    android:gravity="center"
-                    android:checked="true"
-                    android:textColor="@drawable/health_selector_text_color"
-                    android:background="@drawable/health_selector_mother_touchable"
-                    android:text="母亲"/>
-                <RadioButton
-                    android:id="@+id/rb_baby0"
-                    android:layout_width="0dip"
-                    android:layout_height="30dip"
-                    android:button="@null"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textColor="@drawable/health_selector_text_color"
-                    android:background="@drawable/health_selector_baby_touchable"
-                    android:text="@string/baby"/>
-            </RadioGroup>
-            <FrameLayout
-                android:id="@+id/fl_form_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/primary_margin"
-                android:paddingRight="@dimen/primary_margin">
-                <include
-                    android:id="@+id/data_mother"
-                    layout="@layout/fragment_health_data_mother" />
-                <include
-                    android:id="@+id/data_baby"
-                    android:visibility="gone"
-                    layout="@layout/fragment_health_data_baby"/>
-            </FrameLayout>
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:textSize="@dimen/primary_text_size"
+                android:text="@string/choose" />
         </LinearLayout>
+
+        <com.yijiehl.club.android.ui.view.TimePicker
+            android:id="@+id/tp_choose_date"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
