--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="healthFood">#3badb7</color>
     <color name="healthKnowledge">#3b8ab7</color>
     <color name="tabColor">#69c5a3</color>
+    <color name="unnormal">#fcc994</color>
 </resources>
