--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -95,7 +95,7 @@
 
             </RelativeLayout>
 
-            <!-- todo 此处需要添加孕期专区的下拉展示布局 -->
+            <!-- DONE 此处需要添加孕期专区的下拉展示布局 -->
 
             <View
                 android:layout_width="match_parent"
