--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -315,4 +315,10 @@
         <item name="android:background">@null</item>
     </style>
 
+    <style name="health_data_item_editor" parent="health_data_item_data">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:inputType">numberDecimal</item>
+        <item name="android:background">@null</item>
+    </style>
+
 </resources>
