--- a/app/src/main/res/layout/activity_activitys_layout.xml
+++ b/app/src/main/res/layout/activity_activitys_layout.xml
@@ -21,17 +21,17 @@
                 android:id="@+id/iv_search_show"
                 android:layout_width="18dip"
                 android:layout_height="18dip"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="5dip"
                 android:src="@drawable/search_logo"
-                android:visibility="gone"
-                android:layout_centerVertical="true"/>
+                android:visibility="gone" />
 
             <EditText
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/iv_search_show"
                 android:layout_marginLeft="5dip"
+                android:layout_toRightOf="@+id/iv_search_show"
                 android:background="@null" />
 
             <LinearLayout
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dip"
-                    android:text="搜索"
+                    android:text="@string/search"
                     android:textColor="@color/textColorLight" />
             </LinearLayout>
         </RelativeLayout>
