--- a/app/src/main/res/layout/activity_knowledge_list.xml
+++ b/app/src/main/res/layout/activity_knowledge_list.xml
@@ -9,41 +9,57 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="64dip"
-            android:background="#f7fbff">
+            android:layout_height="44dip"
+            android:layout_marginLeft="15dip"
+            android:layout_marginRight="15dip"
+            android:layout_marginTop="10dip"
+            android:background="@drawable/growup_search">
 
-            <RelativeLayout
-                android:id="@+id/layout_search"
+            <ImageView
+                android:id="@+id/iv_search_show"
+                android:layout_width="18dip"
+                android:layout_height="18dip"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dip"
+                android:src="@drawable/search_logo"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/et_search"
                 android:layout_width="match_parent"
-                android:layout_height="44dip"
-                android:layout_marginBottom="10dip"
-                android:layout_marginLeft="15dip"
-                android:layout_marginRight="15dip"
-                android:layout_marginTop="10dip"
-                android:background="@drawable/growup_search">
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dip"
+                android:layout_toRightOf="@+id/iv_search_show"
+                android:background="@null" />
 
-                <LinearLayout
+            <LinearLayout
+                android:id="@+id/layout_search_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dip"
+                    android:layout_height="18dip"
+                    android:src="@drawable/search_logo" />
+
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:orientation="horizontal">
+                    android:layout_marginLeft="10dip"
+                    android:text="@string/search"
+                    android:textColor="@color/textColorLight" />
+            </LinearLayout>
+        </RelativeLayout>
 
-                    <ImageView
-                        android:layout_width="18dip"
-                        android:layout_height="18dip"
-                        android:src="@drawable/search_logo" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dip"
-                        android:text="@string/search"
-                        android:textColor="@color/textColorLight" />
-                </LinearLayout>
-            </RelativeLayout>
-        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dip"
+            android:layout_marginTop="10dip"
+            android:background="#eeeeee" />
 
         <com.uuzz.android.ui.view.ptr.PtrListView
             android:id="@+id/lv_listview"
