修复不能拍照 添加加油站跳转 修正权限 添加图片预览全屏 照片模块上啦加载限制 成长模块上拉加载限制 修复成长list点一下全部变色

--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -366,7 +366,7 @@
                 android:layout_width="66dip"
                 android:layout_height="60dip"
                 android:scaleType="fitStart"
-                android:src="@drawable/gas_station"
+                android:src="@drawable/ico_gasstationm"
                 android:layout_marginLeft="50dip"
                 android:layout_marginTop="14dip"
                 android:layout_below="@id/tv_grow_up_title"/>
